# msal-python-cert-auth-fastapi-api

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SUMMARY.md  docker-compose.yml
.github/workflows/: api-ci.yml
api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/scripts/: README.md  seed_data.py
api/src/: auth.py  config.py  database.py  exceptions.py  health.py  main.py  middleware.py  models.py  pagination.py  performance.py  rate_limit.py  repositories.py  response_models.py  routes.py  services.py
api/tests/: conftest.py
api/tests/integration/: test_endpoints.py
api/tests/unit/: test_config.py  test_repositories.py  test_services.py
cert/: entra-app-cert.pem  entra-app-combined.pem  entra-app-private.key
client/: .env.example  .gitignore  README.md  pyproject.toml
client/src/: __init__.py  api_client.py  auth.py  config.py  exceptions.py  main.py  models.py
client/tests/: conftest.py
client/tests/unit/: test_api_client.py  test_auth.py  test_config.py
docs/: API.md  DEPLOYMENT.md  IMPROVEMENTS.md  SECURITY.md  SUMMARY_FOR_SENIOR_ROLE.md  certificate-based-auth-msal-python-fastapi-requirements.md
docs/adr/: 001-certificate-based-authentication.md  002-repository-pattern.md  README.md
